<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        app:cardCornerRadius="4dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">
            <TextView
                android:id="@+id/textViewData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/data"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/textViewTemp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/temp"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/textViewPressure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pressure"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/textViewHumidity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/humidity"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/textViewWeather"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/textViewDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/textViewClouds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clouds"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/textViewWind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wind"
                android:textSize="20sp"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>